--- a/email-config.yaml
+++ b/email-config.yaml
@@ -3,7 +3,7 @@ server.port: 9001
 email-service:
     dev:
         server.port: 9001
-        from.email: testingrefresh@gmail.com
+        from.email: shahbaz.khan1003@gmail.com
     prod:
         server.port: ${SERVER_PORT}
         from.email: ${FROM_EMAIL}
